Update .gitignore to exclude Wrangler temporary files and remove obsolete middleware files from the project. Adjust chat room creation logic to use a dynamic URL based on the current protocol for improved compatibility.

--- a/src/chat.html
+++ b/src/chat.html
@@ -851,7 +851,7 @@ function startRoomChooser() {
     event.currentTarget.innerHTML = '<span class="loading"></span> 创建中...';
 
     try {
-      let response = await fetch("https://" + hostname + "/api/room", {method: "POST"});
+      let response = await fetch(window.location.protocol + "//" + hostname + "/api/room", {method: "POST"});
       if (!response.ok) {
         throw new Error('Failed to create room');
       }
