Refactor Turtle Soup confirmation handling in chat application. Update confirmation logic to clear timeouts for all users and store both confirmed users and original participants for better state management during the game. Enhance logging for improved debugging and user feedback.

--- a/src/chat.html
+++ b/src/chat.html
@@ -1396,8 +1396,8 @@ function handleTurtleSoupStart(data) {
   turtleSoupInitiator = data.initiator;
   hasResponded = false; // Reset for next request
   
-  // Clear confirmation timeout if we are the initiator
-  if (data.initiator === username && confirmationTimeout) {
+  // Clear confirmation timeout for everyone (not just initiator)
+  if (confirmationTimeout) {
     console.log(`[TurtleSoup Client] Clearing confirmation timeout`);
     clearTimeout(confirmationTimeout);
     confirmationTimeout = null;
